--- a/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/pom.xml
+++ b/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/pom.xml
@@ -42,6 +42,13 @@
       <artifactId>hadoop-hdfs</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>cs.brown.edu</groupId>
+      <artifactId>paneclient</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>/home/paneuser/Downloads/paneclient-0.1-SNAPSHOT.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
