--- a/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/pom.xml
+++ b/hadoop-mapreduce-project/hadoop-mapreduce-client/hadoop-mapreduce-client-core/pom.xml
@@ -43,11 +43,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>cs.brown.edu</groupId>
+      <groupId>edu.brown.cs</groupId>
       <artifactId>paneclient</artifactId>
       <version>0.1-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>/home/paneuser/Downloads/paneclient-0.1-SNAPSHOT.jar</systemPath>
     </dependency>
   </dependencies>
 
