--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -246,6 +246,11 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>edu.berkeley.xtrace</groupId>
+      <artifactId>xtrace</artifactId>
+      <version>2.1-20120824</version>
+    </dependency>    
   </dependencies>
 
   <build>
