--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 target
 hadoop-hdfs-project/hadoop-hdfs/downloads
 hadoop-hdfs-project/hadoop-hdfs-httpfs/downloads
+hadoop-common-project/hadoop-common/src/main/docs/releasenotes.html
