--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <version>1.0</version>
     </dependency>
     <dependency>
+      <groupId>edu.brown.cs.systems</groupId>
+      <artifactId>pivot-tracing</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>17.0</version>
