--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     </dependency>
     <dependency>
       <groupId>edu.brown.cs.systems</groupId>
+      <artifactId>xtrace-security-tracing</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>edu.brown.cs.systems</groupId>
       <artifactId>resourcethrottling</artifactId>
       <version>1.0</version>
     </dependency>
@@ -198,6 +203,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
             <aspectLibrary>
               <groupId>edu.brown.cs.systems</groupId>
               <artifactId>xtrace-resource-tracing</artifactId>
+            </aspectLibrary>
+            <aspectLibrary>
+              <groupId>edu.brown.cs.systems</groupId>
+              <artifactId>xtrace-security-tracing</artifactId>
             </aspectLibrary>
           </aspectLibraries>
         </configuration>
